# eratocythones

./: README.md  main.py  pyproject.toml  setup.py
src/: primes.c  primes.pyx
